# utsudo

./: 0001-fix-compile-error-undefined-reference-to-sys_sigabbr.patch  LICENSE  README.en.md  utsudo.spec
utsudo-0.0.2/: Cargo.toml  README  README.LDAP  build.rs  configure  configure.ac  exec.rs  pathnames.h.in  sudo.pp
utsudo-0.0.2/.cargo/: config.toml
utsudo-0.0.2/lib/util/: Cargo.toml  Makefile.in  libutsudo_util.la  libutsudo_util.lai  libutsudo_variadic.la
utsudo-0.0.2/lib/util/.cargo/: config.toml
utsudo-0.0.2/lib/util/src/: arc4random.rs  arc4random_uniform.rs  closefrom.rs  event.rs  getgrouplist.rs  gethostname.rs  gidlist.rs  key_val.rs  lbuf.rs  lib.rs  locking.rs  macro_struct.rs  memset_s.rs  parseln.rs  progname.rs  secure_path.rs  sha2.rs  (+13 more)
utsudo-0.0.2/plugins/group_file/: Makefile.in
utsudo-0.0.2/plugins/sudoers/: Makefile.in  editor.c  sudoers.c  toke.c  visudo.c
utsudo-0.0.2/plugins/system_group/: Makefile.in
utsudo-0.0.2/src/: Makefile.in  conversation.rs  copy_file.rs  env_hooks.rs  exec.rs  exec_common.rs  exec_monitor.rs  exec_nopty.rs  exec_pty.rs  get_pty.rs  hook.rs  hooks.rs  lib.rs  limits.rs  load_plugins.rs  net_ifs.rs  parse_args.rs  preserve_fds.rs  selinux.rs  sesh.rs  signal.rs  struct_macro.rs  sudo_edit.rs  sudo_noexec.rs  tcsetpgrp_nobg.rs  tgetpass.rs  ttyname.rs  utmp.rs  utsudo.rs
utsudo-0.0.2/src_ori/: copy_file.c  env_hooks.c  exec_nopty.c  openbsd.c  parse_args.c  preserve_fds.c  selinux.c  sudo_edit.c  ttyname.c  utsudo.c
utsudo-0.0.3/plugins/group_file/: Cargo.toml
utsudo-0.0.3/plugins/sudoers/: Cargo.toml
(+176 files in other folders)
