[package]
name = "group_file"
version = "0.1.0"
edition = "2021"
build = "../../build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.135"
utsudo_util = {path = "../../lib/util"}
[lib]
crate-type = ["cdylib"]
[[bin]]
name = "plugin_test"
path = "src/plugin_test.rs"
